--- a/game/overworld.html
+++ b/game/overworld.html
@@ -25,7 +25,7 @@
     /* Region buttons */
     #region-buttons{
       display:grid;
-      grid-template-columns: repeat(3, minmax(120px,1fr));
+      grid-template-columns: repeat(4, minmax(120px,1fr));
       gap:12px; max-width:640px; margin:24px auto; padding:0 16px;
     }
     .region-btn{
@@ -66,6 +66,7 @@
     <button class="region-btn" data-region="forest">Forest</button>
     <button class="region-btn" data-region="temple">Temple</button>
     <button class="region-btn" data-region="shop">Shop</button>
+    <button class="region-btn" data-region="dungeon">Dungeon</button>
   </div>
 
   <!-- character catalog -->
